fips_sources -> fips_dir, fips_files

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,4 +1,4 @@
 fips_begin_app(TestApp windowed)
-    fips_sources(.)
+    fips_files(TestApp.cc shaders.py shaders.shd)
     fips_deps(Gfx)
 fips_end_app()
