Fixed for new fips code generation stuff

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,4 +1,5 @@
 fips_begin_app(TestApp windowed)
-    fips_files(TestApp.cc shaders.py shaders.shd)
+    fips_files(TestApp.cc)
+    fips_generate(FROM shaders.shd TYPE Shader)
     fips_deps(Gfx)
 fips_end_app()
