--- a/fips.yml
+++ b/fips.yml
@@ -2,6 +2,9 @@
 # oryol-test-app
 #
 ---
+policies:
+    no_auto_import: true
+
 imports: 
     oryol:
         git: https://github.com/floooh/oryol.git
